1.2.6
* Remove hard check for VAS in returned pwgrent structure (bug #828)

1.2.5
* Can now compile with GCC 4.6 and higher (bug #820)
* Default value for 'obey pam restrictions' is now NO (bug #664)
* vas-samba-config is now its own package. Vasidmap still contains
  vas-samba-config as well. The vas-samba-config package can be used
  when winbind is not needed on the system and will simplfy the samba
  setup process.
* Updated vasidmapd usage and man pages on how to correctly enable logging
  (bug #841)
* vasidmap-status will not run vasidmapd and vasidmap test when vasidmap
  is not installed.
* vasidmapd will ignore a few common well-known-sids. s-1-1-0, s-1-5-2 and
  s-1-5-11. We will not attempt to find a unix user object for these sids
  bug #837
* vas-samba-config uses upstart jobs on Ubuntu to restart smbd,winbind and
  vasidmapd. (Bug #843)

1.2.4
* vas-samba-config supports include statements being at the end of the global section. (bug #817)
* vas-samba-config no longer adds idmap cache time to version of smb.conf newer than 3.3.0 (bug #610)
* Added pp (polypkg) as part of the vasidmapd package
* Includes the latest PolyPackage which adds support for debian upstart jobs.
* vas-samba-config now restarts winbind if daemon is present. This is a best guess as to the location
  of winbind, may not work in all environments (bug #631)
* Added vas-samba-config support for Samba 3.6 idmap backend parameters. (bug # 816)

1.2.3
* vas-samba-config now updates smb.conf even when no other sections exist besides [global] (bug #785)
* Updated the kinit function in vasidmap-status to work in more scenarios
* Implemented Unix shell traps, to handle proper cleanup when script is finished running
* vasidmap-status now cleans up properly after itself (bug #812)
* Fixed issues on HPUX in vasidmap-status where shell test methods were not being quoted (bug #803)
* Added/Fixed Solaris SMF support in Polypkg (bug #795)